--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <p>Morgan Oakley</p>
             </div>
             <div class="bottom-header-left">
-                <img src="/icons/kitten.png" alt="">
+                <img src="icons/kitten.png" alt="">
                 <div class="bottom-header-left-right">
                     <p>Hi there,</p>
                     <h1>Morgan Oakley (@morgan)</h1>
@@ -77,9 +77,9 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae voluptatibus a non voluptate facere modi ducimus, tempora, incidunt illo delectus aliquid velit, minus aspernatur laborum maiores! Veniam ullam blanditiis quaerat?</p>
                         </div>
                         <div class="project-icons">
-                            <img src="/icons/star-plus-outline.svg" alt="">
-                            <img src="/icons/eye-plus.svg" alt="">
-                            <img src="/icons/source-fork.svg" alt="">
+                            <img src="icons/star-plus-outline.svg" alt="">
+                            <img src="icons/eye-plus.svg" alt="">
+                            <img src="icons/source-fork.svg" alt="">
                         </div>
                     </div>
                     <div class="project-card">
@@ -88,9 +88,9 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae voluptatibus a non voluptate facere modi ducimus, tempora, incidunt illo delectus aliquid velit, minus aspernatur laborum maiores! Veniam ullam blanditiis quaerat?</p>
                         </div>
                         <div class="project-icons">
-                            <img src="/icons/star-plus-outline.svg" alt="">
-                            <img src="/icons/eye-plus.svg" alt="">
-                            <img src="/icons/source-fork.svg" alt="">
+                            <img src="icons/star-plus-outline.svg" alt="">
+                            <img src="icons/eye-plus.svg" alt="">
+                            <img src="icons/source-fork.svg" alt="">
                         </div>
                     </div>
                     <div class="project-card">
@@ -99,9 +99,9 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae voluptatibus a non voluptate facere modi ducimus, tempora, incidunt illo delectus aliquid velit, minus aspernatur laborum maiores! Veniam ullam blanditiis quaerat?</p>
                         </div>
                         <div class="project-icons">
-                            <img src="/icons/star-plus-outline.svg" alt="">
-                            <img src="/icons/eye-plus.svg" alt="">
-                            <img src="/icons/source-fork.svg" alt="">
+                            <img src="icons/star-plus-outline.svg" alt="">
+                            <img src="icons/eye-plus.svg" alt="">
+                            <img src="icons/source-fork.svg" alt="">
                         </div>
                     </div>
                     <div class="project-card">
@@ -110,9 +110,9 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae voluptatibus a non voluptate facere modi ducimus, tempora, incidunt illo delectus aliquid velit, minus aspernatur laborum maiores! Veniam ullam blanditiis quaerat?</p>
                         </div>
                         <div class="project-icons">
-                            <img src="/icons/star-plus-outline.svg" alt="">
-                            <img src="/icons/eye-plus.svg" alt="">
-                            <img src="/icons/source-fork.svg" alt="">
+                            <img src="icons/star-plus-outline.svg" alt="">
+                            <img src="icons/eye-plus.svg" alt="">
+                            <img src="icons/source-fork.svg" alt="">
                         </div>
                     </div>
                     <div class="project-card">
@@ -121,9 +121,9 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae voluptatibus a non voluptate facere modi ducimus, tempora, incidunt illo delectus aliquid velit, minus aspernatur laborum maiores! Veniam ullam blanditiis quaerat?</p>
                         </div>
                         <div class="project-icons">
-                            <img src="/icons/star-plus-outline.svg" alt="">
-                            <img src="/icons/eye-plus.svg" alt="">
-                            <img src="/icons/source-fork.svg" alt="">
+                            <img src="icons/star-plus-outline.svg" alt="">
+                            <img src="icons/eye-plus.svg" alt="">
+                            <img src="icons/source-fork.svg" alt="">
                         </div>
                     </div>
                     <div class="project-card">
@@ -132,9 +132,9 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae voluptatibus a non voluptate facere modi ducimus, tempora, incidunt illo delectus aliquid velit, minus aspernatur laborum maiores! Veniam ullam blanditiis quaerat?</p>
                         </div>
                         <div class="project-icons">
-                            <img src="/icons/star-plus-outline.svg" alt="">
-                            <img src="/icons/eye-plus.svg" alt="">
-                            <img src="/icons/source-fork.svg" alt="">
+                            <img src="icons/star-plus-outline.svg" alt="">
+                            <img src="icons/eye-plus.svg" alt="">
+                            <img src="icons/source-fork.svg" alt="">
                         </div>
                     </div>
                     <div class="project-card">
@@ -143,9 +143,9 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae voluptatibus a non voluptate facere modi ducimus, tempora, incidunt illo delectus aliquid velit, minus aspernatur laborum maiores! Veniam ullam blanditiis quaerat?</p>
                         </div>
                         <div class="project-icons">
-                            <img src="/icons/star-plus-outline.svg" alt="">
-                            <img src="/icons/eye-plus.svg" alt="">
-                            <img src="/icons/source-fork.svg" alt="">
+                            <img src="icons/star-plus-outline.svg" alt="">
+                            <img src="icons/eye-plus.svg" alt="">
+                            <img src="icons/source-fork.svg" alt="">
                         </div>
                     </div>
                     <div class="project-card">
@@ -154,9 +154,9 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae voluptatibus a non voluptate facere modi ducimus, tempora, incidunt illo delectus aliquid velit, minus aspernatur laborum maiores! Veniam ullam blanditiis quaerat?</p>
                         </div>
                         <div class="project-icons">
-                            <img src="/icons/star-plus-outline.svg" alt="">
-                            <img src="/icons/eye-plus.svg" alt="">
-                            <img src="/icons/source-fork.svg" alt="">
+                            <img src="icons/star-plus-outline.svg" alt="">
+                            <img src="icons/eye-plus.svg" alt="">
+                            <img src="icons/source-fork.svg" alt="">
                         </div>
                     </div>
                     <div class="project-card">
@@ -165,9 +165,9 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae voluptatibus a non voluptate facere modi ducimus, tempora, incidunt illo delectus aliquid velit, minus aspernatur laborum maiores! Veniam ullam blanditiis quaerat?</p>
                         </div>
                         <div class="project-icons">
-                            <img src="/icons/star-plus-outline.svg" alt="">
-                            <img src="/icons/eye-plus.svg" alt="">
-                            <img src="/icons/source-fork.svg" alt="">
+                            <img src="icons/star-plus-outline.svg" alt="">
+                            <img src="icons/eye-plus.svg" alt="">
+                            <img src="icons/source-fork.svg" alt="">
                         </div>
                     </div>
                 </div>
@@ -196,28 +196,28 @@
                     <h4>Trending</h4>
                     <div class="trending-card">
                         <div class="user-profile">
-                            <img class="user-pic" src="/icons/icons8-circled-user-female-skin-type-4-96.png" alt="">
+                            <img class="user-pic" src="icons/icons8-circled-user-female-skin-type-4-96.png" alt="">
                             <div class="user-name">
                                 <p class="user-name-top">@tegan</p>
                                 <p class="user-name-bottom">World Peace Builder</p>
                             </div>
                         </div>
                         <div class="user-profile">
-                            <img class="user2" src="/icons/icons8-circled-user-male-skin-type-3-96.png" alt="">
+                            <img class="user2" src="icons/icons8-circled-user-male-skin-type-3-96.png" alt="">
                             <div class="user-name">
                                 <p class="user-name-top">@morgan</p>
                                 <p class="user-name-bottom">Super Cool Project</p>
                             </div>
                         </div>
                         <div class="user-profile">
-                            <img class="user3" src="/icons/icons8-circled-user-female-skin-type-6-96.png" alt="">
+                            <img class="user3" src="icons/icons8-circled-user-female-skin-type-6-96.png" alt="">
                             <div class="user-name">
                                 <p class="user-name-top">@kendall</p>
                                 <p class="user-name-bottom">Life Changing App</p>
                             </div>
                         </div>
                         <div class="user-profile">
-                            <img class="user4" src="/icons/icons8-circled-user-male-skin-type-6-96.png" alt="">
+                            <img class="user4" src="icons/icons8-circled-user-male-skin-type-6-96.png" alt="">
                             <div class="user-name">
                                 <p class="user-name-top">@alex</p>
                                 <p class="user-name-bottom">No Traffic Maker</p>
